# bazel-repro-rules-rust-platform-dependent-extension

./: MODULE.bazel  README.md
submodule/: MODULE.bazel
