
module(name = "submodule")
bazel_dep(name = "rules_rust", version = "0.52.2")

# Dummy crate to trigger resolution of host_tools.
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.spec(
    package = "googletest", # random package
    version = ">0.0.0",
)
crate.from_specs()
use_repo(crate, crate_index = "crates")
